gc settings changes